--- a/SoftPhone.Core/SoftPhone.Core.csproj
+++ b/SoftPhone.Core/SoftPhone.Core.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conversations\ContactEndpoint.cs" />
     <Compile Include="Conversations\Conversation.cs" />
     <Compile Include="Conversations\Contact.cs" />
     <Compile Include="Conversations\ConversationAddedEvent.cs" />
