--- a/SoftPhone.Core/SoftPhone.Core.csproj
+++ b/SoftPhone.Core/SoftPhone.Core.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Salesforce\SalesforceConnectCommand.cs" />
-    <Compile Include="Commands\Salesforce\SaveCredentialsCommand.cs" />
+    <Compile Include="Core\IRepository.cs" />
     <Compile Include="Domain\Conversations\ContactEndpoint.cs" />
     <Compile Include="Domain\Conversations\Conversation.cs" />
     <Compile Include="Domain\Conversations\Contact.cs" />
@@ -72,12 +72,14 @@
     <Compile Include="Core\QueryProcessor.cs" />
     <Compile Include="Domain\Salesforce\SalesforceCredentials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\Salesforce\IGetCredentialsQuery.cs" />
+    <Compile Include="Repositories\Salesforce\ISalesforceCredentialsRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Queries\Salesforce\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
