--- a/SoftPhone.Core/SoftPhone.Core.csproj
+++ b/SoftPhone.Core/SoftPhone.Core.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Core\IQuery.cs" />
     <Compile Include="Core\QueryProcessor.cs" />
     <Compile Include="Domain\Salesforce\SalesforceCredentials.cs" />
+    <Compile Include="Events\Salesforce\SalesforceClientConnectedEvent.cs" />
+    <Compile Include="Events\Salesforce\SalesforceClientDisconnectedEvent.cs" />
+    <Compile Include="Events\Salesforce\SalesforceClientErrorEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Salesforce\ISalesforceCredentialsRepository.cs" />
   </ItemGroup>
