Intergrating Force.net

--- a/SoftPhone.Connector/App.config
+++ b/SoftPhone.Connector/App.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+	<appSettings>
+		<add key="salesforceAddress" value="https://login.salesforce.com/"/>
+		<!--<add key="securityToken" value="jFCYtczDw19zJIZhi1b13p9t"/>-->
+		<add key="consumerKey" value="3MVG9HxRZv05HarQBbOHEGBNaEI_dJGlZ2S4PE1wovFxjJmC94Woojr8FAkesbj70ANXNVjB9DB8G0fv8vrY1"/>
+		<add key="consumerSecret" value="8556229712777576152"/>
+	</appSettings>
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
 	<system.serviceModel>
 		<bindings>
 			<basicHttpBinding>
