--- a/SoftPhone.Salesforce/packages.config
+++ b/SoftPhone.Salesforce/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="cometd2" version="2.1.4734.29273" targetFramework="net452" />
+  <package id="DeveloperForce.Force" version="1.4.0-beta" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
