Moving to Lync2010 and working on exceptions hanling

--- a/SoftPhone.Connector/SoftPhone.Connector.csproj
+++ b/SoftPhone.Connector/SoftPhone.Connector.csproj
@@ -98,6 +98,7 @@
     </ApplicationDefinition>
     <Compile Include="Domain\Salesforce\SalesforceProtectedCredentials.cs" />
     <Compile Include="EventHandlers\Lync\ConversationEventHandler.cs" />
+    <Compile Include="EventHandlers\Lync\LyncClientErrorEventHandler.cs" />
     <Compile Include="EventHandlers\Salesforce\SalesforceClientConnectedEventHandler.cs" />
     <Compile Include="EventHandlers\Salesforce\SalesforceClientDisconnectedEventHandler.cs" />
     <Compile Include="EventHandlers\Salesforce\SalesforceClientErrorEventHandler.cs" />
