--- a/SoftPhone.Core/SoftPhone.Core.csproj
+++ b/SoftPhone.Core/SoftPhone.Core.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Core\IQuery.cs" />
     <Compile Include="Core\QueryProcessor.cs" />
     <Compile Include="Domain\Conversations\ConversationStatus.cs" />
+    <Compile Include="Domain\IAppLogger.cs" />
     <Compile Include="Domain\Salesforce\SalesforceCredentials.cs" />
     <Compile Include="Domain\Salesforce\SalesforceSettings.cs" />
     <Compile Include="Events\ErrorEventBase.cs" />
