--- a/SoftPhone.Connector/packages.config
+++ b/SoftPhone.Connector/packages.config
@@ -2,5 +2,9 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
+  <package id="NLog" version="4.5.0-alpha04" targetFramework="net452" />
+  <package id="NLog.Config" version="4.5.0-alpha04" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.5.0-alpha04" targetFramework="net452" />
+  <package id="NLog.StructuredEvents" version="0.3.1" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
