Ability to switch between SF instances on the fly

--- a/SoftPhone.Connector/App.config
+++ b/SoftPhone.Connector/App.config
@@ -1,26 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<!--<add key="securityToken" value="jFCYtczDw19zJIZhi1b13p9t"/>-->
 		<add key="consumerKey" value="3MVG9HxRZv05HarQBbOHEGBNaEI_dJGlZ2S4PE1wovFxjJmC94Woojr8FAkesbj70ANXNVjB9DB8G0fv8vrY1"/>
 		<add key="consumerSecret" value="8556229712777576152"/>
+		<add key="UAT" value="https://test.salesforce.com/services/oauth2/token"/>
+		<add key="Sandbox" value="https://login.salesforce.com/services/oauth2/token"/>
 	</appSettings>
   <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-	<system.serviceModel>
-		<bindings>
-			<basicHttpBinding>
-				<binding name="SoapBinding">
-					<security mode="Transport" />
-				</binding>
-				<binding name="SoapBinding1" />
-			</basicHttpBinding>
-		</bindings>
-		<client>
-			<endpoint address="https://login.salesforce.com/services/Soap/c/39.0"
-					binding="basicHttpBinding" bindingConfiguration="SoapBinding"
-					contract="SalesforceService.Soap" name="Soap" />
-		</client>
-	</system.serviceModel>
 </configuration>
