Ability to switch between instances

--- a/SoftPhone.Connector/App.config
+++ b/SoftPhone.Connector/App.config
@@ -1,12 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="consumerKey" value="3MVG9HxRZv05HarQBbOHEGBNaEI_dJGlZ2S4PE1wovFxjJmC94Woojr8FAkesbj70ANXNVjB9DB8G0fv8vrY1"/>
-		<add key="consumerSecret" value="8556229712777576152"/>
-		<add key="UAT" value="https://test.salesforce.com/services/oauth2/token"/>
-		<add key="Sandbox" value="https://login.salesforce.com/services/oauth2/token"/>
+		<add key="UAT" value="{ 'InstanceUrl': 'https://test.salesforce.com/services/oauth2/token', 'ConsumerKey': '3MVG9HxRZv05HarQBbOHEGBNaEI_dJGlZ2S4PE1wovFxjJmC94Woojr8FAkesbj70ANXNVjB9DB8G0fv8vrY1', 'ConsumerSecret': '8556229712777576152', 'SecurityToken': 'jFCYtczDw19zJIZhi1b13p9t'}" />
+		<add key="Sandbox" value="{ 'InstanceUrl': 'https://login.salesforce.com/services/oauth2/token', 'ConsumerKey': '3MVG9HxRZv05HarQBbOHEGBNaEI_dJGlZ2S4PE1wovFxjJmC94Woojr8FAkesbj70ANXNVjB9DB8G0fv8vrY1', 'ConsumerSecret': '8556229712777576152', 'SecurityToken': 'jFCYtczDw19zJIZhi1b13p9t'}" />
 	</appSettings>
   <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
